update to scripts

--- a/Configuration_Testing.ipynb
+++ b/Configuration_Testing.ipynb
@@ -40,7 +40,7 @@
       "  warnings.warn(warn, FutureWarning)\n",
       "/glade/work/afoster/conda-envs/ml_analysis/lib/python3.11/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
       "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 35145 instead\n",
+      "Hosting the HTTP server on port 35541 instead\n",
       "  warnings.warn(\n"
      ]
     }
@@ -179,7 +179,6 @@
     "    thefile = 'clusters.clm51_PPEn02ctsm51d021_2deg_GSWP3V1_leafbiomassesai_PPE3_hist.annual+sd.400.nc'\n",
     "    sg = xr.open_dataset(thedir + thefile)\n",
     "\n",
-    "    #ds = ds.isel(ensemble=0)\n",
     "    out = np.zeros(sg.cclass.shape) + np.nan\n",
     "    for c, (o, a) in enumerate(sg.rcent_coords):\n",
     "        i = np.arange(400)[\n",
@@ -266,6 +265,54 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "aa1399d2-f986-42f3-b9a9-426960214be1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def post_process_all(top_dir, data_vars, postp_dir):\n",
+    "    dirs = sorted(os.listdir(top_dir))\n",
+    "    for dir in dirs:\n",
+    "        postprocess(top_dir, dir, data_vars, postp_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "10eda0c6-058c-4406-9688-1d0e5d805207",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_ilamb_files(postp_dir, ilamb_dir, data_vars):\n",
+    "\n",
+    "    files = sorted([os.path.join(postp_dir, file) for file in os.listdir(postp_dir)])\n",
+    "    for file in files:\n",
+    "        make_ilamb_file(file, ilamb_dir, data_vars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "1e55b7c6-7c49-4fd1-875b-e9000775a315",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_ilamb_file(file, ilamb_dir, data_vars):\n",
+    "    dat = xr.open_dataset(file)\n",
+    "    dfs = []\n",
+    "    for var in data_vars:\n",
+    "        map = get_map(dat, dat[var])\n",
+    "        dfs.append(map)\n",
+    "    all_vars = xr.merge(dfs)\n",
+    "    grid = os.path.basename(file).replace('.nc', '').split('_')[-2:]\n",
+    "    subdir = '_'.join(grid)\n",
+    "    if not os.path.exists(os.path.join(ilamb_dir, subdir)):\n",
+    "        os.mkdir(os.path.join(ilamb_dir, subdir))\n",
+    "    all_vars.to_netcdf(os.path.join(ilamb_dir, subdir, os.path.basename(file)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "df3fdffa-12ce-49a9-a3b9-e3f9b7977079",
    "metadata": {},
    "outputs": [],
@@ -287,43 +334,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "563afa18-6449-4a71-9bd8-0de87fdf80db",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_vars = ['FATES_GPP', 'EFLX_LH_TOT', 'FSR', 'FSDS', 'QRUNOFF', 'FATES_FRACTION', 'SNOWDP', \n",
-    "             'SOILWATER_10CM', 'TV', 'FATES_LAI', 'TWS', 'FSH', 'QVEGE', 'TG', 'TSA', 'RAIN', 'SNOW', \n",
-    "            'TBOT']"
+    "data_vars = ['FATES_FRACTION', 'FATES_GPP', 'FATES_LAI', 'QVEGE', 'QVEGT',\n",
+    "             'QSOIL', 'EFLX_LH_TOT', 'FSH', 'QRUNOFF', 'SOILWATER_10CM',\n",
+    "             'FSR', 'FSDS', 'FSA', 'FIRE', 'FLDS', 'FGR12', 'RAIN',\n",
+    "             'SNOW', 'H2OSNO', 'SNOWDP', 'TSOI', 'TSA', 'TREFMXAV',\n",
+    "             'TREFMNAV', 'RH2M']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "edac6cbe-dad1-4bd5-a902-9ea6df6a1ad1",
    "metadata": {},
    "outputs": [],
    "source": [
     "top_dir = '/glade/derecho/scratch/afoster/FATES_SP_configs/archive'\n",
     "postp_dir = '/glade/work/afoster/FATES_calibration/configuration_testing/hist/'\n",
-    "dirs = sorted(os.listdir(top_dir))"
+    "ilamb_dir = '/glade/work/afoster/FATES_calibration/configuration_testing/ilamb_hist'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "8d9c6a3c-21b5-48a8-a1d7-ed9e6805bf83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "factorial_key = pd.read_csv('factorial_test_names.csv').set_index('ensemble')\n",
+    "factorial_key = pd.read_csv('../configurations/factorial_test_names.csv').set_index('ensemble')\n",
     "factorial_key['ensemble_name'] = factorial_key[['fates_rad_model', 'fates_maintresp_leaf_model', 'fates_leaf_stomatal_model', 'fates_leaf_photo_tempsens_model']].agg('_'.join, axis=1)\n",
     "fact = xr.Dataset(factorial_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "1b6e163f-8d0e-46a0-ac48-1b4362657b4f",
    "metadata": {},
    "outputs": [],
@@ -334,36 +383,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aa1399d2-f986-42f3-b9a9-426960214be1",
+   "execution_count": 24,
+   "id": "ca90186b-f572-4d63-8951-44179738b280",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if False:\n",
-    "    for dir in dirs:\n",
-    "        postprocess(top_dir, dir, data_vars, postp_dir)"
+    "#post_process_all(top_dir, data_vars, postp_dir)\n",
+    "dirs = sorted(os.listdir(top_dir))\n",
+    "postprocess(top_dir, dirs[7], data_vars, postp_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "10eda0c6-058c-4406-9688-1d0e5d805207",
+   "execution_count": 30,
+   "id": "9185bf0b-becd-4c27-82f0-c83a4eb7249e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_dir = '/glade/work/afoster/FATES_calibration/configuration_testing/ilamb_hist'\n",
-    "files = [os.path.join(postp_dir, file) for file in os.listdir(postp_dir)]\n",
-    "if True:\n",
-    "    for file in files:\n",
-    "        dat = xr.open_dataset(file)\n",
-    "        dfs = []\n",
-    "        for var in data_vars:\n",
-    "            map = get_map(dat, dat[var])\n",
-    "            dfs.append(map)\n",
-    "        all_vars = xr.merge(dfs)\n",
-    "        grid = os.path.basename(file).replace('.nc', '').split('_')[-2:]\n",
-    "        subdir = '_'.join(grid)\n",
-    "        all_vars.to_netcdf(os.path.join(out_dir, subdir, os.path.basename(file)))"
+    "#make_ilamb_files(postp_dir, ilamb_dir, data_vars)\n",
+    "files = sorted([os.path.join(postp_dir, file) for file in os.listdir(postp_dir)])\n",
+    "make_ilamb_file(files[7], ilamb_dir, data_vars)"
    ]
   },
   {
@@ -373,6 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "files = sorted([os.path.join(postp_dir, file) for file in os.listdir(postp_dir)])\n",
     "ds = get_ensemble(files, whit)\n",
     "ds = xr.merge([ds, fact])"
    ]
@@ -422,7 +462,7 @@
    "outputs": [],
    "source": [
     "vlim = abs(diff.GPP).max() + 0.1\n",
-    "plot_map(diff.GPP, 'GPP', f'{name} - {default_name}' , 'bwr_r', 'GPP Difference (Pg C/m2/yr)', vmin = -1.0*vlim, vmax = vlim)"
+    "plot_map(diff.GPP, 'GPP', f'{name} - {default_name}', 'bwr_r', 'GPP Difference (Pg C/m2/yr)', vmin = -1.0*vlim, vmax = vlim)"
    ]
   },
   {
