--- a/post_process.ipynb
+++ b/post_process.ipynb
@@ -29,7 +29,7 @@
      "text": [
       "/glade/work/afoster/conda-envs/fates_calibration/lib/python3.11/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
       "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 35233 instead\n",
+      "Hosting the HTTP server on port 37171 instead\n",
       "  warnings.warn(\n"
      ]
     },
@@ -40,7 +40,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-539aa019-8d65-11ef-9581-3cecef1aca46</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-094fa76b-b345-11ef-ad06-3cecef1b12be</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -53,7 +53,7 @@
        "        \n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard: </strong> <a href=\"https://jupyterhub.hpc.ucar.edu/stable/user/afoster/proxy/35233/status\" target=\"_blank\">https://jupyterhub.hpc.ucar.edu/stable/user/afoster/proxy/35233/status</a>\n",
+       "                    <strong>Dashboard: </strong> <a href=\"https://jupyterhub.hpc.ucar.edu/stable/user/afoster/proxy/37171/status\" target=\"_blank\">https://jupyterhub.hpc.ucar.edu/stable/user/afoster/proxy/37171/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\"></td>\n",
        "            </tr>\n",
@@ -71,11 +71,11 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">PBSCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">a2ed3aa7</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">2078c92a</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard:</strong> <a href=\"https://jupyterhub.hpc.ucar.edu/stable/user/afoster/proxy/35233/status\" target=\"_blank\">https://jupyterhub.hpc.ucar.edu/stable/user/afoster/proxy/35233/status</a>\n",
+       "                    <strong>Dashboard:</strong> <a href=\"https://jupyterhub.hpc.ucar.edu/stable/user/afoster/proxy/37171/status\" target=\"_blank\">https://jupyterhub.hpc.ucar.edu/stable/user/afoster/proxy/37171/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\">\n",
        "                    <strong>Workers:</strong> 0\n",
@@ -102,11 +102,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-446df119-dc26-4182-a3f0-c54f1c950586</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-5df5e4b2-c42c-46b9-a22e-4dd53440fb08</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://128.117.208.96:41665\n",
+       "                        <strong>Comm:</strong> tcp://128.117.208.81:40611\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 0\n",
@@ -114,7 +114,7 @@
        "                </tr>\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Dashboard:</strong> <a href=\"https://jupyterhub.hpc.ucar.edu/stable/user/afoster/proxy/35233/status\" target=\"_blank\">https://jupyterhub.hpc.ucar.edu/stable/user/afoster/proxy/35233/status</a>\n",
+       "                        <strong>Dashboard:</strong> <a href=\"https://jupyterhub.hpc.ucar.edu/stable/user/afoster/proxy/37171/status\" target=\"_blank\">https://jupyterhub.hpc.ucar.edu/stable/user/afoster/proxy/37171/status</a>\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Total threads:</strong> 0\n",
@@ -152,7 +152,7 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://128.117.208.96:41665' processes=0 threads=0, memory=0 B>"
+       "<Client: 'tcp://128.117.208.81:40611' processes=0 threads=0, memory=0 B>"
       ]
      },
      "execution_count": 2,
@@ -168,12 +168,13 @@
     "    processes=1,                                 # How many processes\n",
     "    queue='casper',                              # The type of queue to utilize\n",
     "    local_directory='/glade/work/afoster',       # Use your local directory\n",
-    "    resource_spec='select=1:ncpus=1:mem=25GB',   # Specify resources\n",
+    "    resource_spec='select=1:ncpus=1:mem=25GB',   # Specify resources]\n",
+    "    log_directory='/glade/derecho/scratch/afoster/dask_logs',\n",
     "    account='P08010000',                         # Input your project ID here\n",
     "    walltime='02:00:00',                         # Amount of wall time\n",
     "    interface='ext')                             # Interface to use\n",
     "\n",
-    "cluster.scale(10)\n",
+    "cluster.scale(20)\n",
     "dask.config.set({\n",
     "    'distributed.dashboard.link': 'https://jupyterhub.hpc.ucar.edu/stable/user/{USER}/proxy/{port}/status'\n",
     "})\n",
@@ -188,9 +189,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "archive_dir = '/glade/derecho/scratch/afoster/codompft_ensembles/archive'\n",
-    "postp_dir = '/glade/work/afoster/FATES_calibration/FATES_SP_LH/codompft_hist'\n",
-    "out_dir = '/glade/work/afoster/FATES_calibration/FATES_SP_LH/'"
+    "archive_dir = '/glade/derecho/scratch/afoster/transient_ensemble/spinup/archive'\n",
+    "postp_dir = '/glade/work/afoster/FATES_calibration/old_calib/FATES_SP_LH/transient_hist_co2'\n",
+    "out_dir = '/glade/work/afoster/FATES_calibration/old_calib/FATES_SP_LH/'\n",
+    "out_file = 'transient_hist_co2.nc'"
    ]
   },
   {
@@ -214,30 +216,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e9c7b2e9-9b2b-4086-99ff-de18638288cc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/glade/work/afoster/conda-envs/fates_calibration/lib/python3.11/site-packages/distributed/client.py:3162: UserWarning: Sending large graph of size 37.92 MiB.\n",
-      "This may cause some slowdown.\n",
-      "Consider scattering data ahead of time and using futures.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# combine into one file, calculate some output variables\n",
-    "out_file = os.path.join(out_dir, 'codompft_ensemble.nc')\n",
+    "out_file = os.path.join(out_dir, out_file)\n",
     "compile_ensemble(postp_dir, out_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5eee34cc-9ad2-41d6-81a9-a93827202aad",
    "metadata": {},
    "outputs": [],
