--- a/calculate_whittaker_biomes.ipynb
+++ b/calculate_whittaker_biomes.ipynb
@@ -105,9 +105,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ml_analysis]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-ml_analysis-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -119,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
